--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -22,7 +22,6 @@ a {
 .main__container {
     max-width: 80rem;
 }
-.main {
-    position: relative;
-    top: 80px;
+main {
+    margin-top: 80px;
 }
