--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -11,6 +11,7 @@
     top: 0;
     width: 100%;
     z-index: 999;
+    overflow: hidden;
     .logo {
         font-size: 3rem;
         font-weight: 600;
