--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,16 +4,17 @@
     height: 100vh;
     color: #fff;
     max-height: 120rem;
-    // min-height: 30rem;
     text-align: center;
+    display: grid;
+    place-items: center;
+    -ms-place-items: center;
+    -webkit-place-items: center;
+    -moz-place-items: center;
+    -o-place-items: center;
     
     
     .hero__content {
         width: 90%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
 }
 .hero__title {
@@ -34,7 +35,7 @@
     .hero__button {
         border: 0;
     }
-
+    
     .button {
         color: color(primary-color);
         text-transform: uppercase;
@@ -60,7 +61,11 @@
 @media only screen and (max-width: 768px){
     .hero {
         height: 86vh;
+        min-height: 45rem;
     }
+    // .hero__content {
+    //     margin-top: 40px;
+    // }
     .button--large {
         padding: 1.5rem 5rem;
     }
@@ -74,6 +79,9 @@
 
 //screens below 320px
 @media only screen and (max-width: 320px){
+    .hero {
+        min-height: 65rem;
+    }
     .button--large {
         padding: 1.5rem 2.5rem;
     }
